<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CreateMeeting">

    <!--Put form controls here-->
    <TextView
        android:id="@+id/TextViewMeetingName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/meetingNamePrompt"
        android:textSize="15dp"
        android:layout_weight="0.5"
        >
    </TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        />

    <EditText android:id="@+id/meeting_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hint="@string/meeting_name_message"
        android:layout_weight="1"/>

    <!--Picking a category-->
    <TextView
        android:id="@+id/TextViewPickCategory"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/categoryPrompt"
        android:layout_weight="0.5"
        android:textSize="15dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        />

    <Spinner
        android:id="@+id/category"
        android:layout_height="0dp"
        android:prompt="@string/categoriesPrompt"
        android:layout_width="fill_parent"
        android:entries="@array/categories_array"
        android:layout_weight="1">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/participants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Participants"
            android:textSize="15dp"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="20dp"
            android:layout_weight="1"
            android:onClick="add"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/remove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="20dp"
            android:layout_weight="1"
            android:onClick="remove"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="2"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="horizontal">
               <EditText android:id="@+id/phone1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Phone 1"
                   android:layout_weight="1"/>
               <EditText android:id="@+id/address1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Address 1"
                   android:layout_weight="1"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="horizontal">
               <EditText android:id="@+id/phone2"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Phone 2"
                   android:layout_weight="1"/>
               <EditText android:id="@+id/address2"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Address 2"
                   android:layout_weight="1"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="horizontal">
               <EditText android:id="@+id/phone3"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Phone 3"
                   android:layout_weight="1"/>
               <EditText android:id="@+id/address3"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Address 3"
                   android:layout_weight="1"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="horizontal">
               <EditText android:id="@+id/phone4"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Phone 4"
                   android:layout_weight="1"/>
               <EditText android:id="@+id/address4"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:hint="Address 4"
                   android:layout_weight="1"/>
           </LinearLayout>

       </LinearLayout>
    <!--Buttons-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitButtonText"
            android:paddingTop="15dp"
            android:onClick="submit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetButtonText"
            android:onClick="clear"/>
    </LinearLayout>

</LinearLayout>